# LibAPR

./: CMakeLists.txt
examples/: CMakeLists.txt  Example_apr_iterate.cpp  Example_apr_neighbour_access.cpp  Example_apr_tree.cpp  Example_apr_tree.hpp  Example_get_apr.cpp  Example_get_apr.h  Example_iterate_max.cpp  Example_random_access.cpp  Example_ray_cast.cpp  Example_reconstruct_patch.cpp
gpuhack/: CMakeLists.txt  Cpu_neighbour_access_Tree_stencil.cpp  Cpu_neighbour_access_Tree_stencil_genD.cpp  GPU_555_conv.cu  GPU_dynamic_zx_access.cu  GPU_insert_dense_conv.cu  GPU_raycast.cu
src/algorithm/: APRConverter.hpp  APRParameters.hpp  ComputeGradient.hpp  LocalIntensityScale.hpp  LocalParticleCellSet.hpp  PullingScheme.hpp
src/data_structures/APR/: APR.hpp  APRAccess.hpp  APRIterator.hpp  APRTree.hpp  ExtraParticleData.hpp  GenIterator.hpp
src/data_structures/Mesh/: PixelData.hpp
src/io/: APRWriter.hpp
src/numerics/: APRCompress.hpp  APRComputeHelper.hpp  APRFiltering.hpp  APRNumerics.hpp  APRReconstruction.hpp  APRTreeNumerics.hpp
src/wrapper/: DataParallelOps.hpp  PyAPR.hpp  PyAPRFiltering.hpp  pythonBind.cpp
tensorflow_ops/: tf_aprconv.cpp
